@@ -81,6 +81,7 @@ enum {
   BST_ACTION_NEW_PROJECT,
   BST_ACTION_OPEN_PROJECT,
   BST_ACTION_MERGE_PROJECT,
+  BST_ACTION_IMPORT_MIDI,
   BST_ACTION_SAVE_PROJECT,
   BST_ACTION_SAVE_PROJECT_AS,
   BST_ACTION_CLOSE_PROJECT,
