@@ -1,3 +1,9 @@
+Fri Dec 26 22:34:16 2003  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstapp.[hc]: added midi-import action.
+
+	* beast-gtk/bstfiledialog.[hc]: added midi-import file dialog.
+
 Sun Dec 28 05:07:08 2003  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/gxk/gxkparam.c: protect parameter from change notification
